# MinecraftPropper

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
deploy/: install.sh  nginx.conf
minecraft_manager/: config.py  dependencies.py  main.py
minecraft_manager/models/: backup.py  server.py  update.py  world.py
minecraft_manager/routers/: backups.py  console.py  dashboard.py  server.py  settings.py  updates.py  worlds.py
minecraft_manager/services/: backup.py  console.py  paper_api.py  server_control.py  server_status.py  update.py  world.py
minecraft_manager/static/css/: style.css
minecraft_manager/static/js/: app.js
minecraft_manager/templates/: backups.html  base.html  console.html  dashboard.html  settings.html  updates.html  worlds.html
minecraft_manager/templates/partials/: backup_list.html  server_status.html  update_status.html  world_config.html  world_list.html
scripts/: backup.sh  health_check.sh  restore_backup.sh  update_paper.sh  update_plugin.sh  world_switch.sh
systemd/: minecraft.service
