[project]
name = "minecraft-manager"
version = "0.1.0"
description = "Web-based Minecraft Paper server manager with Geyser/Floodgate support"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "websockets>=11.0",
    "pydantic-settings>=2.0.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minecraft_manager*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
